crud Getting user by manager.
